--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,92 @@
-camelot_py==1.0.0
-fpdf==1.7.2
-matplotlib==3.10.3
-numpy==2.3.1
+altair==5.5.0
+attrs==25.3.0
+blinker==1.9.0
+cachetools==5.5.2
+camelot-py==1.0.0
+certifi==2025.1.31
+cffi==1.17.1
+chardet==5.2.0
+charset-normalizer==3.4.1
+click==8.1.8
+contourpy==1.3.1
+cryptography==44.0.2
+cycler==0.12.1
+et_xmlfile==2.0.0
+filelock==3.18.0
+fonttools==4.56.0
+fsspec==2025.3.0
+gitdb==4.0.12
+GitPython==3.1.44
+huggingface-hub==0.29.3
+idna==3.10
+Jinja2==3.1.6
+joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+kiwisolver==1.4.8
+MarkupSafe==3.0.2
+matplotlib==3.10.1
+mpmath==1.3.0
+narwhals==1.30.0
+networkx==3.4.2
+numpy==2.2.3
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-cusparselt-cu12==0.6.2
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
+opencv-python-headless==4.11.0.86
 openpyxl==3.1.5
-pandas==2.3.0
+packaging==24.2
+pandas==2.2.3
 pdf2image==1.17.0
+pdfminer.six==20240706
 pdfplumber==0.11.5
-Pillow==11.2.1
+pillow==11.1.0
 plotly==6.0.0
+protobuf==5.29.3
+pyarrow==19.0.1
+pycparser==2.22
+pydeck==0.9.1
+pyparsing==3.2.1
+pypdf==5.3.1
+pypdfium2==4.30.1
 pytesseract==0.3.13
-python_docx==1.2.0
-sentence_transformers==3.4.1
+python-dateutil==2.9.0.post0
+pytz==2025.1
+PyYAML==6.0.2
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.3
+rpds-py==0.23.1
+safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.15.2
+sentence-transformers==3.4.1
+setuptools==76.0.0
+six==1.17.0
+smmap==5.0.2
 streamlit==1.43.2
-pdfminer-six>=20240706
-pdfminer.six==20231228
+sympy==1.13.1
+tabulate==0.9.0
+tenacity==9.0.0
+threadpoolctl==3.6.0
+tokenizers==0.21.1
+toml==0.10.2
+torch==2.6.0
+tornado==6.4.2
+tqdm==4.67.1
+transformers==4.49.0
+triton==3.2.0
+typing_extensions==4.12.2
+tzdata==2025.1
+urllib3==2.3.0
+watchdog==6.0.0
